# libical-glib-GNOME

./: .autotools  .cproject  .project  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.am~  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  autogen.sh~  config.h  config.h.in~  config.status  configure  configure.ac  configure.ac~  i-cal-enums.h  libical-glib-1.0.0.tar.xz  libical-glib-1.0.pc  libical-glib.doap  libical-glib.doap~  libical-glib.pc.in  libtool
autom4te.cache/: output.0  output.3  requests  traces.0  traces.1  traces.2  traces.3
docs/reference/: Makefile.am
docs/reference/libical-glib/: Makefile.am  Makefile.in  libical-glib-docs.sgml  libical-glib-sections.txt  libical-glib.types
m4/: Makefile.am~
src/: Makefile  Makefile.am  Makefile.in
src/api/: Makefile  Makefile.am  Makefile.in  i-cal-array.xml  i-cal-attach.xml  i-cal-comp-iter.xml  i-cal-component.xml  i-cal-datetimeperiod-type.xml  i-cal-derived-parameter.xml  i-cal-derived-property.xml  i-cal-derived-value.xml  i-cal-duration-type.xml  i-cal-enums.xml  i-cal-error.xml  i-cal-geo-type.xml  i-cal-langbind.xml  i-cal-memory.xml  i-cal-mime.xml  i-cal-parameter.xml  i-cal-parser.xml  i-cal-period-type.xml  i-cal-property.xml  i-cal-recur-iterator.xml  i-cal-recur.xml  i-cal-recurrence-type.xml  i-cal-reqstat-type.xml  i-cal-restriction.xml  i-cal-time-span.xml  i-cal-time.xml  i-cal-timetype.xml  i-cal-timezone-phase.xml  i-cal-timezone.xml  i-cal-timezonetype.xml  i-cal-trigger-type.xml  i-cal-unknowntokenhandling.xml  i-cal-value.xml
src/build-tools/: Makefile  Makefile.am  Makefile.in  common-header.h  generator.c  generator.c~  generator.h  generator.h~  header-header-template  header-structure-boilerplate-template  header-template  source-structure-boilerplate-template  source-structure-boilerplate-template~  source-template  src-generator  xml-parser.c  xml-parser.h
src/build-tools/.deps/: src_generator-generator.Po  src_generator-xml-parser.Po
src/libical-glib/: ICalGLib-1.0.gir  ICalGLib-1.0.typelib  Makefile  Makefile.am  Makefile.am~  Makefile.in  common-header.h  i-cal-array.c  i-cal-array.h  i-cal-attach.c  i-cal-attach.h  i-cal-component.c  i-cal-component.h  i-cal-duration-type.c  i-cal-duration-type.h  i-cal-enums.c  i-cal-enums.h  i-cal-error.c  i-cal-error.h  i-cal-langbind.c  i-cal-langbind.h  i-cal-object.c.in  i-cal-object.h  i-cal-object.h.in  i-cal-property.c  i-cal-property.h  i-cal-time.c  i-cal-time.h  i-cal-timetype.c  i-cal-timetype.h  i-cal-timezone.c  i-cal-timezone.h  i-cal-tzutil.c  i-cal-tzutil.h  libical-glib-1.0.la  libical-glib.h.in  libical-glib.h.in~  libical_glib_1_0_la-i-cal-array.lo  libical_glib_1_0_la-i-cal-attach.lo  libical_glib_1_0_la-i-cal-component.lo  (+8 more)
src/libical-glib/.deps/: libical_glib_1_0_la-i-cal-array.Plo  libical_glib_1_0_la-i-cal-attach.Plo  libical_glib_1_0_la-i-cal-component.Plo  libical_glib_1_0_la-i-cal-duration-type.Plo  libical_glib_1_0_la-i-cal-enums.Plo  libical_glib_1_0_la-i-cal-error.Plo  libical_glib_1_0_la-i-cal-object.Plo  libical_glib_1_0_la-i-cal-property.Plo  libical_glib_1_0_la-i-cal-time.Plo  libical_glib_1_0_la-i-cal-timetype.Plo  libical_glib_1_0_la-i-cal-timezone.Plo
src/libical-glib/.libs/: libical-glib-1.0.la  libical-glib-1.0.lai
tests/: Makefile.am  Makefile.in  array.py  attach.py  component.py  component.py~  comprehensive.py  duration-type.py  error.py  parameter.py  period-type.py  property.py  recurrence-type.py  recurrence.py  test-cal.py  test-component.py  tests-env.sh  timezone.py  value.py
