NULL =

EXTRA_DIST =  \
	i-cal-time.xml \
	i-cal-array.xml \
	i-cal-attach.xml \
	i-cal-duration-type.xml \
	i-cal-enums.xml \
	i-cal-error.xml \
	i-cal-langbind.xml \
	i-cal-memory.xml \
	i-cal-mime.xml \
	i-cal-parameter.xml \
	i-cal-parser.xml \
	i-cal-period.xml \
	i-cal-recur-iterator.xml \
	i-cal-recur.xml \
	i-cal-restriction.xml \
	i-cal-timetype.xml \
	i-cal-timezone.xml \
	i-cal-derived-value.xml \
	i-cal-value.xml \
	$(NULL)

-include $(top_srcdir)/git.mk
