NULL =

EXTRA_DIST =  \
	i-cal-time.xml \
	i-cal-array.xml \
	i-cal-attach.xml \
	i-cal-duration-type.xml \
	i-cal-enums.xml \
	i-cal-error.xml \
	i-cal-langbind.xml \
	i-cal-memory.xml \
	i-cal-mime.xml \
	i-cal-parameter.xml \
	i-cal-parser.xml \
	i-cal-period-type.xml \
	i-cal-recur-iterator.xml \
	i-cal-recur.xml \
	i-cal-recurrence-type.xml \
	i-cal-restriction.xml \
	i-cal-timetype.xml \
	i-cal-timezone.xml \
	i-cal-derived-value.xml \
	i-cal-value.xml \
	i-cal-geo-type.xml \
	i-cal-datetimeperiod-type.xml \
	i-cal-reqstat-type.xml \
	i-cal-trigger-type.xml \
	i-cal-timezone-phase.xml \
	i-cal-timezonetype.xml \
	i-cal-unknowntokenhandling.xml \
	i-cal-langbind.xml \
	i-cal-time-span.xml \
	i-cal-comp-iter.xml \
	i-cal-derived-parameter.xml \
	i-cal-derived-property.xml \
	$(NULL)

-include $(top_srcdir)/git.mk
